--- a/src/global.custom.scss
+++ b/src/global.custom.scss
@@ -147,3 +147,12 @@ td {
 .ant-table-thead {
   height: 64px !important;
 }
+
+// emoji
+.ant-popover-arrow {
+  display: none !important;
+}
+
+.ant-popover-inner {
+  overflow: hidden !important;
+}
