--- a/src/components/CustomModal/index.scss
+++ b/src/components/CustomModal/index.scss
@@ -1,20 +1,16 @@
 @import '../../styles/base.scss';
 
 .modalBox {
-  height: 240px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-
   .inputBox {
     display: flex;
     height: 40px;
+    margin: 15px 0;
 
     .inputKey {
       width: 64px;
-      height: 40px;
-      line-height: 40px;
-      text-align: right;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       font-size: 16px;
       font-weight: 700;
     }
