feat: update ClassCard

--- a/src/components/ClassCard/index.scss
+++ b/src/components/ClassCard/index.scss
@@ -37,7 +37,7 @@
       .classTextBox {
         flex: 1;
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
 
         .classText {
