--- a/src/pages/Admin/Home/index.scss
+++ b/src/pages/Admin/Home/index.scss
@@ -18,15 +18,13 @@
   }
   .tagsNoticeContainer {
     flex: 1;
-    display: flex;
-    flex-direction: column;
 
     .NoticeContainer {
       height: 160px;
       margin-bottom: 20px;
     }
     .tagsContainer {
-      flex: 1;
+      height: calc(100% - 160px - 20px);
     }
   }
 }
