feat: about finished

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -4,7 +4,7 @@
 .headerBtnBase {
   position: absolute;
   top: 50%;
-  z-index: 99;
+  z-index: 9999999;
   transform: translateY(-50%);
   width: 40px;
   height: 40px;
