feat: change Antd to ArcoDesign

--- a/src/components/AboutBase/index.scss
+++ b/src/components/AboutBase/index.scss
@@ -4,8 +4,8 @@
   height: 100%;
 
   .contentBox {
-    height: calc(100vh - 62px - 70px - 40px - 50px);
-    border-radius: 12px;
+    height: 100%;
+    border-radius: 2px;
     overflow: hidden;
     background-color: #fff;
     overflow-y: auto;
