--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,10 +1,10 @@
 // 颜色
 $themeColor1: rgb(18, 83, 143);
 $themeColor2: rgb(195, 206, 217);
-$themeColor3: rgb(22, 119, 255);
-$themeColor3_light: rgb(64, 150, 255);
+$themeColor3: #165dff;
+$themeColor3_light: #4080ff;
 
-$themeColor4: rgb(255, 77, 79);
-$themeColor4_light: rgb(255, 135, 133);
+$themeColor4: #f53f3f;
+$themeColor4_light: #f76560;
 
 $themeColor5: rgb(221, 236, 255);
