--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -2,7 +2,7 @@
 @import '../../styles/style.scss';
 
 .LoginBox {
-  height: 100%;
+  height: 100vh;
   display: flex;
 
   .leftBox {
@@ -11,22 +11,21 @@
     padding: 40px;
     font-size: 70px;
     font-weight: 700;
-    color: $themeColor2;
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   .rightBox {
     width: 50%;
-    background-color: $themeColor2;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 
     .avatarBox {
-      height: 120px;
-      width: 120px;
+      height: 80px;
+      width: 80px;
       border-radius: 50%;
       overflow: hidden;
       margin-bottom: 20px;
@@ -38,60 +37,13 @@
     }
 
     .loginBox {
-      width: 360px;
-
-      .item {
-        display: flex;
-        height: 50px;
-        margin-bottom: 20px;
-        border-radius: 15px;
-        overflow: hidden;
-        font-size: 20px;
-        font-weight: 700;
-
-        .key {
-          width: 70px;
-          background-color: $themeColor1;
-          color: $themeColor2;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          @extend .trans;
-        }
-
-        .key:hover {
-          background-color: $themeColor3 !important;
-        }
-
-        .value {
-          width: calc(100% - 70px);
-          background-color: #fff;
-          padding: 0 20px;
-          font-size: 20px;
-          text-align: center;
-        }
-      }
-
-      .item:last-child {
-        margin-bottom: 0;
-      }
+      width: 320px;
+      display: flex;
+      flex-direction: column;
 
       .btnBox {
+        display: flex;
         justify-content: space-evenly;
-        align-items: center;
-        user-select: none;
-
-        .btn {
-          height: 50px;
-          border-radius: 15px;
-          background-color: $themeColor1;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 80px;
-          color: $themeColor2;
-          @extend .hover;
-        }
       }
     }
   }
