feat: 整理所有组件的height

--- a/src/components/CountCard/index.scss
+++ b/src/components/CountCard/index.scss
@@ -10,8 +10,8 @@
 }
 
 .countCardBox {
-  width: calc((100% - 4 * 20px) / 5);
-  height: 160px;
+  width: calc((100% - 4 * 10px) / 5);
+  height: 100%;
   background-color: #fff;
   border-radius: 2px;
   overflow: hidden;
