--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -20,10 +20,7 @@
 }
 
 .headerBox {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
+  position: relative;
   height: 62px;
   background-color: #fff;
   border-bottom: 1px solid rgb(229, 230, 235);
