--- a/src/components/AboutBase/index.scss
+++ b/src/components/AboutBase/index.scss
@@ -1,30 +1,13 @@
-@import '../../styles/base.scss';
+.site {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 20px;
+  font-weight: 700;
+}
 
-.aboutBox {
-  height: 100%;
-
-  .contentBox {
-    height: 100%;
-    border-radius: 2px;
-    overflow: hidden;
-    background-color: #fff;
-    overflow-y: auto;
-  }
-
-  .site {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 20px;
-    font-weight: 700;
-  }
-
-  .contentBox::-webkit-scrollbar {
-    width: 8px;
-  }
-  .contentBox::-webkit-scrollbar-thumb {
-    background: $themeColor3_light;
-    border-radius: 2px;
-  }
+.markDownContent {
+  background-color: #fff;
+  height: calc(100% - (56px + 10px));
 }
