--- a/src/global.custom.scss
+++ b/src/global.custom.scss
@@ -7,12 +7,13 @@
   src: url(./fonts/FiraCode-Regular.ttf);
   font-weight: normal;
   font-style: normal;
+  font-display: auto;
 }
 
 html,
 body,
 #root {
-  height: 100%;
+  height: 100vh;
 }
 
 p,
