--- a/src/pages/Admin/Home/index.scss
+++ b/src/pages/Admin/Home/index.scss
@@ -1,30 +1,34 @@
 .countCardContainer {
+  height: 160px;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .homeBigContainer {
-  height: calc(100vh - 62px - 20px - 160px - 20px - 20px - 70px);
+  height: calc(100% - 160px - 10px);
   display: flex;
 
   .chartContainer {
+    height: 100%;
     flex: 2;
-    margin-right: 20px;
+    margin-right: 10px;
   }
   .classesContainer {
+    height: 100%;
     flex: 1;
-    margin-right: 20px;
+    margin-right: 10px;
   }
   .tagsNoticeContainer {
+    height: 100%;
     flex: 1;
 
     .NoticeContainer {
       height: 160px;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
     .tagsContainer {
-      height: calc(100% - 160px - 20px);
+      height: calc(100% - 160px - 10px);
     }
   }
 }
