feat: update tableTag

--- a/src/components/MarkDown/index.scss
+++ b/src/components/MarkDown/index.scss
@@ -7,6 +7,7 @@
   word-break: break-all;
   height: 100%;
   overflow-y: auto;
+  @extend .scroll;
 
   h2,
   h3,
@@ -102,12 +103,4 @@
   hr {
     margin: 20px 0;
   }
-}
-
-.markdownBox::-webkit-scrollbar {
-  width: 8px;
-}
-.markdownBox::-webkit-scrollbar-thumb {
-  background: $themeColor3_light;
-  border-radius: 2px;
 }
