--- a/src/pages/Admin/AboutEdit/index.scss
+++ b/src/pages/Admin/AboutEdit/index.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/base.scss';
+@import '../../../styles/style.scss';
 
 .aboutTitle {
   position: absolute;
@@ -31,13 +32,6 @@
     margin-right: 10px;
     padding: 30px;
     font-size: 18px;
-  }
-
-  .markedEdit::-webkit-scrollbar {
-    width: 8px;
-  }
-  .markedEdit::-webkit-scrollbar-thumb {
-    background: $themeColor3_light;
-    border-radius: 2px;
+    @extend .scroll;
   }
 }
