--- a/src/pages/Admin/index.scss
+++ b/src/pages/Admin/index.scss
@@ -10,6 +10,7 @@
     display: flex;
 
     .leftNav {
+      position: relative;
       height: 100%;
       width: 150px;
       box-sizing: border-box;
@@ -51,6 +52,23 @@
           cursor: default !important;
           color: $themeColor3;
         }
+      }
+
+      .turnOldVer {
+        position: absolute;
+        left: 10px;
+        right: 10px;
+        bottom: 10px;
+        // width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 40px;
+        font-size: 15px;
+        color: rgb(78, 89, 105);
+      }
+      .turnOldVer:hover {
+        background-color: #f2f3f5;
       }
     }
 
