feat: 取消[返回旧版]入口

--- a/src/pages/Admin/index.scss
+++ b/src/pages/Admin/index.scss
@@ -54,22 +54,22 @@
         }
       }
 
-      .turnOldVer {
-        position: absolute;
-        left: 10px;
-        right: 10px;
-        bottom: 10px;
-        // width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 40px;
-        font-size: 15px;
-        color: rgb(78, 89, 105);
-      }
-      .turnOldVer:hover {
-        background-color: #f2f3f5;
-      }
+      // .turnOldVer {
+      //   position: absolute;
+      //   left: 10px;
+      //   right: 10px;
+      //   bottom: 10px;
+      //   // width: 100%;
+      //   display: flex;
+      //   justify-content: center;
+      //   align-items: center;
+      //   height: 40px;
+      //   font-size: 15px;
+      //   color: rgb(78, 89, 105);
+      // }
+      // .turnOldVer:hover {
+      //   background-color: #f2f3f5;
+      // }
     }
 
     .rightContent {
